# adviskv

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README.zh-CN.md  vcpkg.json
src/: CMakeLists.txt
src/common/: arg_parser.h  background_task.cpp  background_task.h  batch_dispatch_queue.h  buffer.h  common.h  confmgr.h  crash_injection.h  crc.h  defer.h  define.h  enum_convert.cpp  enum_convert.h  framed_record_codec.h  func.h  id_allocator.h  log.cpp  log.h  oper_gate.h  optional.h  path_util.h  serial_task_runner.cpp  serial_task_runner.h  stable_hash.h  status.h  thread_pool.cpp  thread_pool.h  tick_trigger.h  type.h  types.h
src/common/metrics/: latency_recorder.h  metrics.cpp  metrics.h
src/common/model/: endpoint.h  engine_type.h  expected_replica.h  ids.h  peer_member.h  raft_member.h  raft_member_type.h  replica_role.h  sdm_table_status.h  storage_replica_status.h  type.h
src/common/proto/: endpoint_proto.h  engine_type_proto.h  expected_replica_proto.h  ids_proto.h  peer_member_proto.h  proto.h  raft_member_proto.h  raft_member_type_proto.h  raft_role_proto.h  replica_id_proto.h  rpc_alias.h  sdm_table_status_proto.h  storage_replica_status_proto.h
src/meta/: CMakeLists.txt
src/meta/background/: table_ddl_reconciler.cpp  table_ddl_reconciler.h
src/meta/catalog/: catalog_manager.cpp  catalog_manager.h  meta_types.h
src/meta/handler/: meta_service_impl.cpp  meta_service_impl.h
src/meta/main/: main.cpp
src/meta/model/: ddl_params.h  meta_types.h
src/meta/persist/: i_meta_persist_engine.h  meta_persist_engine.cpp  meta_persist_engine.h
src/meta/proto/: table_state_proto.h
src/meta/service/: ddl_params.h  ddl_service.cpp  ddl_service.h  sdm_client.cpp  sdm_client.h
src/sdk/: CMakeLists.txt  client.cpp  client.h  config.h  log.h  model.h  route_cache.cpp  route_cache.h  sdm_route_client.cpp  sdm_route_client.h  storage_client.cpp  storage_client.h
src/sdm/: CMakeLists.txt
src/sdm/background/: background.cpp  background.h  background_task.cpp  background_task.h  capacity_check_task.cpp  capacity_check_task.h  heartbeat_check_task.cpp  heartbeat_check_task.h  replica_schedule_task.cpp  replica_schedule_task.h  routeupdate_check_task.cpp  routeupdate_check_task.h  routeupdate_check_tast.cpp  routeupdate_check_tast.h  table_reconciler.cpp  table_reconciler.h
src/sdm/client/: storage_client.cpp  storage_client.h
src/sdm/handler/: sdm_service_impl.cpp  sdm_service_impl.h
src/sdm/main/: main.cpp
src/sdm/manager/: meta_cache_manager.cpp  meta_cache_manager.h  node_manager.cpp  node_manager.h  route_manager.cpp  route_manager.h
src/sdm/model/: i_sdm_metastore.cpp  i_sdm_metastore.h  meta_cache_model.h  meta_store.h  model.h  node_model.h  param.h  pb_convert.cpp  route_model.h  sdm_runtime_index.cpp  sdm_runtime_index.h  sdm_store.cpp  sdm_store.h  sdm_store_txn.cpp  sdm_store_txn.h  service_param.h  store.h  table_status.h
src/sdm/operation/: ioperation.h  operation_deps.h  operation_factory.h  placedb_operation.cpp  placedb_operation.h  placetable_operation.cpp  placetable_operation.h
src/sdm/persist/: sdm_persist_engine.cpp  sdm_persist_engine.h
src/sdm/plan/: iplan.h  placement_plan.h
src/sdm/proto/: node_status_proto.cpp  node_status_proto.h  table_status_proto.h
src/sdm/reconcile/: replica_group_membership_reconciler.cpp  replica_group_membership_reconciler.h  replica_group_plan_reconciler.cpp  replica_group_plan_reconciler.h  replica_group_reconciler.h  replica_phase_projection.cpp  replica_phase_projection.h
src/sdm/service/: heartbeat_service.cpp  heartbeat_service.h  node_service.cpp  node_service.h  placement_service.cpp  placement_service.h  replica_group_service.cpp  replica_group_service.h  route_service.cpp  route_service.h  service_manager.cpp  service_manager.h  table_service.cpp  table_service.h
src/sdm/store/: i_sdm_metastore.cpp  i_sdm_metastore.h  memory_metastore.cpp  memory_metastore.h  persistent_metastore.cpp  persistent_metastore.h  runtime_index.cpp  runtime_index.h  runtime_store.cpp  runtime_store.h  sdm_store.cpp  sdm_store.h  sdm_store_txn.cpp  sdm_store_txn.h
src/sdm/utility/: enum_convert.cpp  enum_convert.h  keylock.h  pb_convert.h
src/sdm/workflow/: placetable_workflow.cpp  placetable_workflow.h  placetable_workflow_runner.cpp  placetable_workflow_runner.h
src/sdsdk/: CMakeLists.txt  heartbeater.cpp  heartbeater.h  istorage_callback.h  node_agent.cpp  node_agent.h  replica_controller.cpp  replica_controller.h  type.h
src/storage/: CMakeLists.txt
src/storage/callback/: storage_callback.cpp  storage_callback.h
src/storage/engine/: kv_engine.h  map_engine.cpp  map_engine.h
src/storage/handler/: storage_service.cpp  storage_service.h  storage_service_impl.cpp  storage_service_impl.h
src/storage/main/: main.cpp
src/storage/model/: model.h  param.h  replica_status.h
src/storage/node_agent/: heartbeater.cpp  heartbeater.h  node_agent.cpp  node_agent.h
src/storage/persist/: persist_engine.cpp  persist_engine.h  replica_meta_persist_engine.cpp  replica_meta_persist_engine.h
src/storage/proto/: storage_model_proto.h
src/storage/raft/: grpc_raft_rpc_transport.cpp  grpc_raft_rpc_transport.h  iraft_rpc_transport.h  raft_apply.cpp  raft_apply.h  raft_background_task.cpp  raft_background_task.h  raft_callback.cpp  raft_callback.h  raft_election.cpp  raft_election.h  raft_log.cpp  raft_log.h  raft_membership.cpp  raft_membership.h  raft_node.cpp  (+7 more)
test/: CMakeLists.txt  test_env.h  test_main.cpp
test/common/: metrics_test.cpp
test/e2e/: cluster.py  conftest.py  pytest.ini  test_basic_chain.py
test/sdm/: sdm_store_test_helper.h
tools/bench/: CMakeLists.txt  bench_client.cpp  bench_options.h
tools/cli/: CMakeLists.txt
tools/e2e/: CMakeLists.txt  e2e_assert.cpp  e2e_assert.h  e2e_case_util.cpp  e2e_case_util.h  e2e_context.cpp  e2e_context.h  e2e_kv_util.cpp  e2e_kv_util.h  e2e_main.cpp  e2e_options.h  e2e_route_util.cpp  e2e_route_util.h  e2e_storage_test_util.cpp  e2e_storage_test_util.h  e2e_table_util.cpp  e2e_table_util.h  heavy_case_util.h
(+201 files in other folders)
